--- a/client/SensorCli/src/app/app.component.html
+++ b/client/SensorCli/src/app/app.component.html
@@ -1,57 +1,8 @@
-<nav class="navbar navbar-dark bg-primary">
-  <a class="navbar-brand" href=""> Sensor </a>
-</nav>
-
-<div class="container">
-  <div class="row mt-4">
-    <div class="col-md-8">
-      <ul class="list-group">
-        <li
-          *ngFor="let sensor of sensors"
-          class="list-group-item list-group-item-action"
-        >
-          {{ sensor.name }}
-        </li>
-      </ul>
-      <div class="card mt-4">
-        <div class="card-body">
-          <div class="card-title">Ingrese un nuevo sensor.</div>
-          <div class="form-group">
-            <input type="text" placeholder="Nombre" class="form-control" />
-          </div>
-          <div class="form-group">
-            <div class="row">
-              <div class="col">
-                <input type="text" placeholder="Latitud" class="form-control" />
-              </div>
-              <div class="col">
-                <input
-                  type="text"
-                  placeholder="Longitud"
-                  class="form-control"
-                />
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <input
-                type="text"
-                placeholder="Máximo valor"
-                class="form-control"
-              />
-            </div>
-            <div class="col">
-              <input
-                type="text"
-                placeholder="Mínimo valor"
-                class="form-control"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4"></div>
+<div id="wrapper">
+  <div id="sidebar-wrapper">
+    <app-sidebar></app-sidebar>
+  </div>
+  <div id="page-content-wrapper">
+    <router-outlet></router-outlet>
   </div>
 </div>
