--- a/client/SensorCli/src/app/components/sensor/sensor.component.html
+++ b/client/SensorCli/src/app/components/sensor/sensor.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-12">
-      <form
-        class="card mt-4"
-        formGroupName="sensorForm"
-        (ngSubmit)="onSubmit()"
-      >
-        <div class="card-body">
+      <div class="card mt-4">
+        <form
+          class="card-body"
+          [formGroup]="sensorForm"
+          (ngSubmit)="onSubmit()"
+        >
           <h5 class="card-title">Insert a new sensor.</h5>
           <div class="form-group">
             <p>Name</p>
@@ -14,7 +14,7 @@
               type="text"
               placeholder="Name"
               class="form-control"
-              formControl="name"
+              formControlName="name"
             />
           </div>
 
@@ -63,8 +63,8 @@
           </div>
 
           <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
   </div>
 </div>
