--- a/client/SensorCli/src/app/components/sensor/sensor.component.html
+++ b/client/SensorCli/src/app/components/sensor/sensor.component.html
@@ -65,6 +65,22 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
+      <div class="mt-4">
+        <ul class="list-group">
+          <li
+            *ngFor="let sensor of sensors"
+            class="list-group-item list-group-item-action"
+            (click)="onSelected(sensor)"
+            [class.active]="sensor._id === sensorSelected._id"
+          >
+            {{ sensor.name }}
+          </li>
+        </ul>
+      </div>
+      <!-- 
+      <div *ngFor="let sensor of sensors$ | async">
+        <p>Sensor Id: {{ sensor.id }} | Name: {{ sensor.name }}</p>
+      </div> -->
     </div>
   </div>
 </div>
