--- a/client/SensorCli/src/app/components/sensor-event/sensor-event.component.html
+++ b/client/SensorCli/src/app/components/sensor-event/sensor-event.component.html
@@ -1,1 +1,10 @@
-<p>sensor-event works!</p>
+<div class="card">
+  <div class="card-body">
+    <h5>Events</h5>
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-action">
+        {{ sensorEvent.createdAt }} - {{ sensorEvent.value }}
+      </li>
+    </ul>
+  </div>
+</div>
