--- a/client/SensorCli/src/app/components/sensor-event/sensor-event.component.html
+++ b/client/SensorCli/src/app/components/sensor-event/sensor-event.component.html
@@ -1,10 +1,45 @@
 <div class="card">
   <div class="card-body">
-    <h5>Events</h5>
-    <ul class="list-group">
-      <li class="list-group-item list-group-item-action">
+    <h5>Events of {{ sensorName }}</h5>
+    <div *ngIf="loading" class="d-flex justify-content-center">
+      <div class="spinner-border text-primary" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+    <div
+      *ngIf="sensorEvents.length === 0 && !loading"
+      class="alert alert-primary"
+      role="alert"
+    >
+      No events on this sensor.
+    </div>
+    <ul *ngIf="!loading" class="list-group">
+      <li
+        *ngFor="let sensorEvent of sensorEvents"
+        class="list-group-item list-group-item-action"
+      >
         {{ sensorEvent.createdAt }} - {{ sensorEvent.value }}
       </li>
     </ul>
+  </div>
+  <div class="card-footer">
+    <div class="d-flex justify-content-end">
+      <input
+        type="number"
+        class="form-control w-75 mr-2"
+        placeholder="Event value"
+        [formControl]="value"
+      />
+      <button class="btn btn-primary w-25" (click)="sendEvent()">
+        Send Event
+      </button>
+    </div>
+    <div
+      *ngIf="errorMessage !== '' && !loading"
+      class="alert alert-danger mt-4"
+      role="alert"
+    >
+      {{ errorMessage }}
+    </div>
   </div>
 </div>
